tests/neg/app3.actual
4 |   f1(a, b)
  |         ^

    Type mismatch: expected IO^{a}, but got IO^{b}
